# GYF-V2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Complete.md  FEATURE_EXPANDABLE_COLLECTION_GRID.md  Makefile  Motivation.md  New_Update.md  PROGRESS.md  Plan.md  README.md  ScopeofIdea.md  Update.md  execution.md  models.registry.json  netlify.toml  package.json  pubspec.yaml  render.yaml  tsconfig.base.json  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  data-export.yml  keep-warm.yml  keepalive.yml  production-catalog-plans.yml  purge.yml  supabase-preview.yml  tryon-worker.yml
app/: .env.example  .gitignore  Dockerfile  Dockerfile.web  instrumentation.ts  layout.tsx  middleware.ts  next.config.mjs  next.config.ts  open-next.config.ts  package.json  proxy.ts  tsconfig.json  vitest.config.ts  wrangler.jsonc
components/: CustomCursor.tsx  SplashScreen.tsx
docs/: IMPLEMENTATION_PLAN.md  README.md  engineering-doctrine.md  footwear-compatibility-system.md  implementation-plan.md  roadmap.md  tech-stack.md
eval-reports/: encoder-google-siglip2-base-v1.json  encoder-marqo-fashionSigLIP-v1.json
gyf_app/: README.md  analysis_options.yaml
infra/: README.md  SETUP.md  container-stack.sh  docker-compose.yml
ml/: Dockerfile  README.md  pyproject.toml
ml/common/: __init__.py  color.py  config.py  device.py  photo_study.py  remote_client.py
ml/eval/: __init__.py  bake_off.py  compare.py  metrics.py  retrieval_eval.py
ml/eval-reports/: skintone-fairness-mste-v1.json
ml/perception/: __init__.py  attributes.py  color.py  inspect.py  model.py  perceive.py  remote.py
ml/pipelines/: __init__.py  backfill.py  backfill_gender.py  export_events.py  recolor.py  vton_pairs.py
ml/serving/: modal_encoder.py
ml/tests/: test_backfill.py  test_backfill_gender.py  test_bake_off.py  test_body.py  test_compare.py  test_eval.py  test_export_events.py  test_http_encoder.py  test_perception.py  test_photo_study.py  test_remote_body.py  test_remote_encoder.py  test_skintone.py
ml/usermodel/: __init__.py
ml/usermodel/body/: __init__.py  classify.py  estimate.py  estimator.py  inspect.py  measurements.py  remote.py
ml/usermodel/skintone/: __init__.py  classify.py  color.py  estimate.py  estimator.py  fairness_eval.py  inspect.py  remote.py  whitebalance.py
notebooks/: m2_bakeoff_colab.ipynb
scripts/: check_doc_alignment.py  check_model_licenses.py  check_ports.py  check_promotion.py  check_repo_hygiene.py  deploy_gpu_space.sh  e2e_workstream_a.sh  eval_e2e.py  measure_slo.py  production_catalog_plans.py  seed_fashion_feed.py  seed_prod_catalog.sh  sync_conversions.py  test_check_repo_hygiene.py  test_production_catalog_plans.py  verify_cycle3.py  verify_deployed_auth.sh  verify_flywheel.py  verify_flywheel.sh  verify_skintone_cycle3.py  verify_taste_cycle2.py  verify_workstream_c.py
services/: PROGRESS.md
services/api/: Dockerfile  PROGRESS.md  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/api/app/: affiliate.py  auth.py  collections.py  config.py  dependencies.py  events.py  main.py  media.py  metrics.py  observability.py  ratelimit.py  saved_outfits.py  security_headers.py  sink.py  social.py  support.py  telemetry.py  wardrobe.py
services/api/app/catalog/: __init__.py  cuelinks.py  directory.py  ingest.py  merchants.py  perception_adapter.py  query_cache.py  retrieval.py  sources.py  taxonomy.py
services/api/app/profile/: __init__.py  account.py  avatar.py  models.py  photo.py  purge.py  repository.py  summary.py
services/api/app/recsys/: __init__.py  candidates.py  compose.py  conditioning.py  goals.py  models.py  service.py  signals.py  taste.py
services/api/app/routers/: __init__.py  catalog.py  collections.py  cuelinks.py  feedback.py  profile.py  recommendations.py  social.py  support.py  system.py  tryon.py  wardrobe.py
services/api/app/static/: gallery.html
services/api/app/tryon/: __init__.py  fal_kolors.py  fal_leffa.py  fashn.py  jobs.py  renderer.py  worker.py
services/api/data/: events.jsonl
services/api/db/: schema.sql
services/api/db/migrations/: env.py  script.py.mako
services/api/db/migrations/versions/: 0001_baseline_schema.py  0002_perception_catalog.py  0003_interaction_context.py  0004_collections_wardrobe_social.py  0005_saved_outfits.py  0006_row_level_security.py  0007_items_price_index.py  0008_follows.py  0009_user_display_name.py  0010_support_messages.py  0011_hot_path_indexes.py  0012_phone_and_avatar.py  0013_browse_hot_path_indexes.py  0014_interaction_idempotency.py  0015_seeded_browse_index.py  0016_query_embedding_cache.py  0017_catalog_availability.py  0018_tryon_jobs.py  0019_available_browse_seed_index.py  0020_available_browse_order_index.py  0021_catalog_image_count_index.py  0022_catalog_title_search_index.py  0023_available_category_browse_order.py  0023_avatar_storage.py  0024_avatar_storage.py  0025_social_moderation.py  0026_recommendation_join_index.py
services/api/tests/: conftest.py  test_affiliate.py  test_auth.py  test_available_category_browse_order_migration.py  test_avatar_lifecycle.py  test_avatar_storage_migration.py  test_browse_postgres.py  test_catalog.py  test_catalog_availability.py  test_catalog_feeds.py  test_catalog_title_search_migration.py  test_catalog_title_search_postgres.py  test_collections.py  test_config.py  test_cuelinks_ingestion.py  test_eval_report.py  test_export_postgres.py  test_footwear_validation_integration.py  test_foundation.py  test_golden_path.py  test_health.py  test_learning_consent.py  test_license_gate_e2e.py  test_model_policy.py  test_profile.py  test_profile_photo.py  test_profile_summary.py  test_query_cache.py  test_recsys.py  test_request_style.py  test_retrieval.py  test_retrieval_multi_slot.py  test_rls.py  test_runtime_model_gate.py  test_saved_outfits.py  test_search_multi_slot_endpoint.py  test_security_headers.py  test_shopify_source.py  test_sink.py  test_social.py  (+7 more)
test/: app_shell_test.dart  components_test.dart
(+511 files in other folders)
