[project]
name = "gyf-ml"
version = "0.0.0"
description = "GYF ML platform — perception, user modeling, recsys, compatibility, try-on, eval"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
# Heavy perception runtime — Marqo-FashionSigLIP via open_clip. Optional so the
# library and its tests import without downloading model weights.
perception = [
  "open-clip-torch>=2.24.0",
  "torch>=2.2.0",
  # Marqo-FashionSigLIP loads its tokenizer via HF Transformers; required at runtime.
  "transformers>=4.40.0",
]
postgres = [
  "psycopg[binary,pool]>=3.2.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perception", "pipelines", "common", "eval"]
