[project]
name = "gyf-ml"
version = "0.0.0"
description = "GYF ML platform — perception, user modeling, recsys, compatibility, try-on, eval"
requires-python = ">=3.12"
dependencies = [
  "gyf-contracts",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
]

# Local monorepo source for the shared domain contracts (uv resolves the path).
[tool.uv.sources]
gyf-contracts = { path = "../packages/contracts", editable = true }

[project.optional-dependencies]
# Heavy perception runtime — Marqo-FashionSigLIP via open_clip. Optional so the
# library and its tests import without downloading model weights.
perception = [
  "open-clip-torch>=2.24.0",
  "torch>=2.2.0",
  # Marqo-FashionSigLIP loads its tokenizer via HF Transformers; required at runtime.
  "transformers>=4.40.0",
]
postgres = [
  "psycopg[binary,pool]>=3.2.0",
]
# Remote GPU lane — encode via a hosted Gradio endpoint (HF Space / RunPod / Modal)
# instead of loading weights locally. Lightweight on purpose (no torch): this is the
# alternative to the `perception` extra. See docs/deploy/gpu-lane.md.
remote = [
  "gradio-client>=1.3.0",
]
# Skin-tone runtime — RetinaFace face detection + FaRL face-parsing via pyfacer
# (MIT), per-pixel skin segmentation. CPU-capable (slower) — no GPU required.
# Optional so the pure colour-science logic imports & tests weightless.
skintone = [
  "pyfacer>=0.0.5",
  "torch>=2.2.0",
]
# Body-type runtime — SAM 3D Body → MHR mesh (SAM License / Apache MHR). GPU for
# real inference; gated behind the SAM License before production enable. Optional
# and lazy so the pure measurement/classify logic imports & tests weightless.
bodyshape = [
  "torch>=2.2.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perception", "pipelines", "common", "eval", "usermodel"]
