[project]
name = "gyf-api"
version = "0.0.0"
description = "GYF core API (accounts, catalog, social, commerce, feedback)"
requires-python = ">=3.12"
dependencies = [
  "gyf-contracts",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pyjwt[crypto]>=2.9.0",
  "prometheus-client>=0.21.0",
  # Photo onboarding (POST /profile/photo): multipart intake + image decode/EXIF strip.
  "python-multipart>=0.0.9",
  "pillow>=10.0",
]

# Local monorepo sources (uv resolves the paths). gyf-ml is only pulled by the
# `photo-remote` extra; its base deps are light (no torch).
[tool.uv.sources]
gyf-contracts = { path = "../../packages/contracts", editable = true }
gyf-ml = { path = "../../ml", editable = true }

[project.optional-dependencies]
kafka = [
  "kafka-python>=2.0.2",
]
# Photo onboarding over the ZeroGPU lane (M3/M4): the endpoint reaches the skin-tone
# and SAM 3D Body Spaces via gradio_client and uses the ml `usermodel` package for the
# remote adapters + taxonomy. Lightweight on the API host — gyf-ml's base deps are
# numpy/pillow/pydantic only (no torch/pyfacer/SAM). See docs/deploy/gpu-lane.md.
photo-remote = [
  "gyf-ml",
  "gradio-client>=2.0.0",
]
postgres = [
  "psycopg[binary,pool]>=3.2.0",
]
migrate = [
  "alembic>=1.16.0",
  "sqlalchemy>=2.0.0",
]
otel = [
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]
sentry = [
  "sentry-sdk>=2.14.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
